--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.2.7",
+    "@tarojs/plugin-platform-weapp": "^3.2.9",
+    "@tarojs/react": "3.2.7",
     "@tarojs/runtime": "3.2.7",
     "@tarojs/taro": "3.2.7",
-    "@tarojs/react": "3.2.7",
-    "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
