--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tarojs/react": "3.2.7",
     "@tarojs/runtime": "3.2.7",
     "@tarojs/taro": "3.2.7",
+    "eslint": "^6.8.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
