--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "dist/",
   "projectname": "qqMusic",
   "description": "",
-  "appid": "wx9c866a9cb4531b12",
+  "appid": "touristappid",
   "setting": {
     "urlCheck": true,
     "es6": false,
